noinst_LTLIBRARIES = liblapack.la
liblapack_la_SOURCES = dlae2.f   dlanst.f  dlapy2.f  dlarf.f   dlarft.f  dlascl.f \
		       dlasr.f   dlassq.f  dorg2l.f  dorgql.f  dorgtr.f  dsterf.f \
                       dsytd2.f  dlaev2.f  dlansy.f  dlarfb.f  dlarfg.f  dlartg.f \
		       dlaset.f  dlasrt.f  dlatrd.f  dorg2r.f  dorgqr.f  dsteqr.f \
		       dsyev.f   dsytrd.f  lsame.f   xerbla.f  dgemm.f   ilaenv.f \
		       dscal.f   dlamch.f  dsyr2k.f  ieeeck.f  iparmq.f  dsymv.f  \
		       ddot.f    daxpy.f   dsyr2.f   dnrm2.f   dswap.f   dcopy.f  \
		       dgemv.f   dtrmv.f   dtrmm.f   dger.f    lapack.cc lapack.h

